k8 jit apis